# magalu

./: .flake8  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  ADD_NEW_API.md  LICENSE  Makefile  Poetry.md  README.md  check_release_v2.sh  go.work  goreleaser_cli.yaml  goreleaser_internal.yaml  goreleaser_internal_cli.yaml  goreleaser_internal_terraform.yaml  goreleaser_terraform.yaml  internal.yaml  pyproject.toml  release.yaml
.github/: pull_request_template.md
.tours/: criao-do-terraform-state.tour
cli/: README.md  go.mod  go.sum  main.go
cli_specs/: block-storage.jaxyendy.openapi.json  block-storage.jaxyendy.openapi_2024-06-13_15-44-41.old.json  conv.block-storage.jaxyendy.openapi.json  conv.network.jaxyendy.openapi.json  conv.virtual-machine-xaas.jaxyendy.openapi.json  conv.virtual-machine.jaxyendy.openapi.json  database.jaxyendy.openapi.json  network.jaxyendy.openapi.json  network.jaxyendy.openapi_2024-06-13_15-44-40.old.json  virtual-machine-xaas.jaxyendy.openapi_2024-06-13_15-44-41.old.json  virtual-machine.jaxyendy.openapi.json
examples/: create-vm-with-disk.sh
openapi-customizations/: README.md  audit.openapi.yaml  block-storage.openapi.yaml  container-registry.openapi.yaml  dbaas.openapi.yaml  events.openapi.yaml  kubernetes.openapi.yaml  load-balancer.openapi.yaml  mke.openapi.yaml  network.openapi.yaml  object-storage.openapi.yaml  profile.openapi.yaml  ssh.openapi.yaml  virtual-machine-xaas.openapi.yaml  virtual-machine.openapi.yaml  vpc.openapi.yaml
script-qa/: cli-dump-tree.json  cli-full-help-output.txt  spec_stats_dump.yml
(+3365 files in other folders)
